# ov9782_trig_sync

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: trig_sync.params.yaml
launch/: trig_sync.launch.py
ov9782_trig_sync/: trig_sync.py
src/: trig_sync_node.cpp
